syntax = "proto3";

option csharp_namespace = "FlexZon.CategoryService.Api";
import "google/api/annotations.proto";

package category_service;

service CategorySvc {
  rpc Get (GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/api/v1/category",
    };
  }
  rpc GetById (GetByIdRequest) returns (GetByIdResponse) {
    option (google.api.http) = {
      get: "/api/v1/category/{id}",
    };
  }
  rpc Create (CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/category",
      body: "*"
    };
  }
  rpc Update (UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/api/v1/category/{id}",
      body: "*"
    };
  }
  rpc Delete (DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/api/v1/category/{id}",
    };
  }
}

message GetRequest {
}

message GetResponse {
  message Category {
    int64 id = 1;
    string title = 2;
    string description = 3;
  }
  repeated Category Categories = 1;
}

message GetByIdRequest {
  int64 id = 1;
}

message GetByIdResponse {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

message CreateRequest {
  string title = 1;
  string description = 2;
}

message CreateResponse {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

message UpdateRequest {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

message UpdateResponse {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

message DeleteRequest {
  int64 id = 1;
}

message DeleteResponse {
  int64 id = 1;
  string title = 2;
  string description = 3;
}
